animations and a confirmation modal

--- a/uasdm-web/src/main/ng2/src/app/shared/modal/step-indicator/modal-step-indicator.css
+++ b/uasdm-web/src/main/ng2/src/app/shared/modal/step-indicator/modal-step-indicator.css
@@ -9,7 +9,7 @@
 }
 .step-indicator .nav-item.active{
     /* background: darkgrey; */
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .step-indicator .nav-item.active.enabled{
     /* background: grey; */
