--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -1,94 +1,98 @@
-<div class="modal-body" style="padding-bottom: 0;">
-  <div >
-  <div *ngIf="message != null" class="error-container">
-    <div class="label-holder">
-      <strong>Error</strong>
-    </div>
-    <div class="holder">
-      <div>
-        <p class="error-message">{{message}}</p>
+<div *ngIf="!showSite" class="modal-body" style="padding-bottom: 0;">
+  <div>
+    <div *ngIf="message != null" class="error-container">
+      <div class="label-holder">
+        <strong>Error</strong>
       </div>
-    </div>
-  </div>
-  
-  <div *ngIf="product != null">
-    <div class="row">
-      <div class="col-md-12">
-        <h2>{{product.name}}</h2>
-      </div>
-    </div>
-  
-    <div class="row">
-      <div class="col-md-12">
-        <ul class="breadcrumb" style="margin-bottom: 10px;">
-          <li *ngFor="let entity of product.entities">
-            <span> {{entity.name}}</span>
-          </li>
-        </ul>                    
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-md-12">
-        <div class="" *ngIf="thumbnails[product.id] != null">
-          <a class="thumbnail non-clickable">
-            <img class="" [src]="thumbnails[product.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
-          </a>
+      <div class="holder">
+        <div>
+          <p class="error-message">{{message}}</p>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <label>Pilot Name: </label> &nbsp; {{product.pilotName}} 
+    <div *ngIf="product != null">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>{{product.name}}</h2>
+        </div>
       </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-md-12">
-        <label>Date/Time: </label> &nbsp; {{product.dateTime}} 
+
+      <div class="row">
+        <div class="col-md-12">
+          <ul class="breadcrumb" style="margin-bottom: 10px;">
+            <li *ngFor="let entity of product.entities">
+              <span> {{entity.name}}</span>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-md-12">
-        <label>Sensor Information:</label> &nbsp; {{product.sensor}} 
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="" *ngIf="thumbnails[product.id] != null">
+            <a class="thumbnail non-clickable">
+              <img class="" [src]="thumbnails[product.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-    
-    <!-- <div class="row">
+
+      <div class="row">
+        <div class="col-md-12">
+          <label>Pilot Name: </label> &nbsp; {{product.pilotName}}
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <label>Date/Time: </label> &nbsp; {{product.dateTime}}
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <label>Sensor Information:</label> &nbsp; {{product.sensor}}
+        </div>
+      </div>
+
+      <!-- <div class="row">
       <div class="col-md-12">
         <label>Raw Images</label> 
       </div>
     </div> -->
-    <div class="row" style="background-color: #ececec;">
-      <div class="col-md-12">
-        <div id="image-list-container">
-          <h3>Raw Images</h3> 
-          <ul class="list-group row">
-            <li *ngFor="let item of product.documents" class="list-group-item col-xs-3" style="background:none;">
-              <div class="" *ngIf="thumbnails[item.id] != null">
-                <a class="thumbnail non-clickable">
-                  <img [src]="thumbnails[item.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
-                  <div class="caption">
-                    <h4 class="media-heading">{{item.name}}</h4>
-                  </div>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>    
-      </div>    
-    </div>
-    
-    <div class="row" style="background-color: #ececec;">
-      <div class="btn-holder" style="text-align: right;margin:20px 20px 20px 20px;">
-        <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-        <button (click)="handleGoto()" class="btn btn-primary" style="margin-left: 5px;">
-          Collection Details
-        </button>    
+      <div class="row" style="background-color: #ececec;">
+        <div class="col-md-12">
+          <div id="image-list-container">
+            <h3>Raw Images</h3>
+            <ul class="list-group row">
+              <li *ngFor="let item of product.documents" class="list-group-item col-xs-3" style="background:none;">
+                <div class="" *ngIf="thumbnails[item.id] != null">
+                  <a class="thumbnail non-clickable">
+                    <img [src]="thumbnails[item.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
+                    <div class="caption">
+                      <h4 class="media-heading">{{item.name}}</h4>
+                    </div>
+                  </a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="row" style="background-color: #ececec;">
+        <div class="btn-holder" style="text-align: right;margin:20px 20px 20px 20px;">
+          <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
+          <button (click)="handleGoto()" class="btn btn-primary" style="margin-left: 5px;">
+            Collection Details
+          </button>
+        </div>
       </div>
     </div>
   </div>
-  </div>
 </div>
+
+<leaf-modal *ngIf="showSite" [initData]="initData"></leaf-modal>
