--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -49,7 +49,7 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <ul class="breadcrumb">
-          <li *ngFor="let label of labels">
+          <li [@fadeInOnEnter] *ngFor="let label of labels">
             <span> {{label}}</span>
           </li>
         </ul>                    
@@ -78,7 +78,7 @@
             </div>
          </div>    
         </div>
-        <div *ngIf="page.selection.isNew" class="form-group">
+        <div [@fadeInOnEnter] [@fadeOutOnLeave] *ngIf="page.selection.isNew" class="form-group">
           <div class="row">
             <div class="col-md-8">
               <input autofocus [(ngModel)]="page.selection.label" name="label" type="input" class="form-control" [placeholder]="page.selection.type + ' name...'" required />
@@ -89,7 +89,7 @@
               </button>
             </div>
          </div>    
-         <div class="row" *ngIf="hasField('platform')">
+         <div [@fadeInOnEnter] [@fadeOutOnLeave] class="row" *ngIf="hasField('platform')">
            <div class="col-md-8">
              <label for="platform" style="margin-top: 10px;">Platform:</label>
              <select [(ngModel)]="page.selection.platform" name="platform" type="input" required>                               
@@ -98,7 +98,7 @@
              </select>            
            </div>
          </div>    
-         <div class="row" *ngIf="hasField('sensor')">
+         <div [@fadeInOnEnter] [@fadeOutOnLeave] class="row" *ngIf="hasField('sensor')">
            <div class="col-md-8">
              <label for="sensor" style="margin-top: 10px;">Sensor:</label>
              <select [(ngModel)]="page.selection.sensor" name="sensor" type="input" required>                               
@@ -112,7 +112,7 @@
     </div>
 
     <!-- Summary page -->
-    <div class="row" *ngIf="page.type === 'SUMMARY' && !existingTask && currentTask == null">
+    <div [@fadeInOnEnter] class="row" *ngIf="page.type === 'SUMMARY' && !existingTask && currentTask == null">
       <div class="col-md-2"></div>
       <div class="col-md-8">
 
@@ -129,7 +129,7 @@
     </div>
     
 
-    <div [hidden]="page.type !== 'FILE' && page.type !== 'SUMMARY'" class="row">
+    <div [@fadeInOnEnter] [@fadeOutOnLeave] [hidden]="page.type !== 'FILE' && page.type !== 'SUMMARY'" class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
 
