--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
                   
-                  <tabset class="nav-full-width">
+                  <tabset #staticTabs class="nav-full-width">
                     <tab heading="Data">                
                       <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container"
                       style="height: calc(100vh - 268px);overflow-y: auto;">
