Fixed tab bug when toggling between products

--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -218,6 +218,14 @@ a.thumbnail.non-clickable:focus {
     vertical-align: middle;
 }
 
+.product-info-modal {
+  width: 75%;
+}
+
+.leaf-modal {
+  width: 75%;
+}
+
 .image-preview {
     width: 100%;
     max-width: 900px;
