--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -387,6 +387,7 @@ a.active {
 .card .button-column {background: rgba(255,255,255,.85);}
 .card.clickable:hover{cursor:pointer;background-color: #f5f5f5;}
 .card.clickable:hover .button-column {background: rgba(245,245,245,.85);}
+.card.active {background-color: lightgrey;}
 .card > .card-link{ color: #333; }
 .card > .card-link:hover{  text-decoration: none; }
 .card > .card-link .card-img img{ border-radius: 6px 6px 0 0; }
