--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -384,7 +384,7 @@ a.active {
  * https://codepen.io/jstneg/pen/EVKYZj
  */
 .card{ background-color: #fff; border: 1px solid transparent; border-radius: 6px; }
-.card .button-column {background: rgba(255,255,255,.85);}
+.card .button-column.floating {background: rgba(255,255,255,.85);}
 .card.clickable:hover{cursor:pointer;background-color: #f5f5f5;}
 .card.clickable:hover .button-column {background: rgba(245,245,245,.85);}
 .card.active {background-color: lightgrey;}
